test/spec_vectors/table/ok/module_9.wat
(module (table 1 (ref null extern)))