test/spec_vectors/table/fail/module_36.wat
(module (type $f (func)) (table 0 0 (ref $f)))